syntax = "proto3";

package auth;

service Auth {
  rpc Register (RegisterRequest) returns (RegisterReply);
  rpc Login (LoginRequest) returns (LoginReply);
}

message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message RegisterReply {
  string message = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginReply {
  string message = 1;
}
